--- a/FrontEnd/angular.json
+++ b/FrontEnd/angular.json
@@ -3,21 +3,21 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "PinBoardFront": {
+    "FrontEnd": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "less"
+          "style": "scss"
         }
       },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/PinBoardFront",
+            "outputPath": "dist/FrontEnd",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,14 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/custom-theme.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.less"
+              "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
-            ],
+            "scripts": [],
             "es5BrowserSupport": true
           },
           "configurations": {
@@ -67,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "PinBoardFront:build"
+            "browserTarget": "FrontEnd:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "PinBoardFront:build:production"
+              "browserTarget": "FrontEnd:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "PinBoardFront:build"
+            "browserTarget": "FrontEnd:build"
           }
         },
         "test": {
@@ -89,7 +84,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.less"
+              "src/styles.scss"
             ],
             "scripts": [],
             "assets": [
@@ -112,7 +107,7 @@
         }
       }
     },
-    "PinBoardFront-e2e": {
+    "FrontEnd-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -121,11 +116,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "PinBoardFront:serve"
+            "devServerTarget": "FrontEnd:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "PinBoardFront:serve:production"
+              "devServerTarget": "FrontEnd:serve:production"
             }
           }
         },
@@ -141,5 +136,5 @@
       }
     }
   },
-  "defaultProject": "PinBoardFront"
+  "defaultProject": "FrontEnd"
 }
